--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,5 +8,20 @@ repos:
       - id: end-of-file-fixer
       - id: check-yaml
       - id: check-added-large-files
+  - repo: https://github.com/pre-commit/mirrors-prettier
+    rev: "" # Use the sha / tag you want to point at
+    hooks:
+      - id: prettier
+        additional_dependencies:
+          - prettier@2.1.2
+          - "@prettier/plugin-xml@0.12.0"
+  - repo: https://github.com/pre-commit/mirrors-csslint
+    rev: "" # Use the sha / tag you want to point at
+    hooks:
       - id: csslint
-      - id: scss-lint
+  - repo: https://github.com/awebdeveloper/pre-commit-stylelint
+    rev: "" # Use the sha or tag you want to point at like 0.0.1
+    hooks:
+      - id: stylelint
+        additional_dependencies:
+          ["stylelint@13.2.1", "stylelint-config-standard@20.0.0"]
