--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,6 +8,7 @@ repos:
       - id: end-of-file-fixer
       - id: check-yaml
       - id: check-added-large-files
+      - id: check-toml
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: "" # Use the sha / tag you want to point at
     hooks:
