--- a/themes/zuzu/theme.toml
+++ b/themes/zuzu/theme.toml
@@ -1,22 +1,16 @@
 # theme.toml template for a Hugo theme
 # See https://github.com/gohugoio/hugoThemes#themetoml for an example
 
-name = "Zuzu"
+name = "zuzu"
 license = "MIT"
 licenselink = "https://github.com/yourname/yourtheme/blob/master/LICENSE"
 description = "Landing page for Zuzu"
-homepage = "http://example.com/"
+homepage = "https://legal.zuzu.network/"
 tags = []
 features = []
 min_version = "0.41.0"
 
 [author]
-  name = "JIHOONLEE"
+  name = "Kodebox"
   email = "jihoon@kodebox.io"
   homepage = ""
-
-# If porting an existing theme
-[original]
-  name = ""
-  homepage = ""
-  repo = ""
