--- a/data/banner/promotion/voucher.toml
+++ b/data/banner/promotion/voucher.toml
@@ -1,3 +1,3 @@
-title = "주주 리걸이 비대면 바우처 공급기업으로 선정되었어요!"
-content = "수요기업이라면 100배 이득인 비대면 바우처로 법인 등기해보세요!"
+title = "주주 리걸이 비대면 바우처 공급기업으로 선정되었어요"
+content = "수요기업이라면 100배 이득인 법인 등기 지금 시작하세요"
 link = "/assets/animation/trophy.json"
