--- a/data/section/main.toml
+++ b/data/section/main.toml
@@ -1,4 +1,2 @@
-title = "셀프 등기·등기 대행 모두 주주 리걸 🎉"
-content = "이번에 유상증자랑 스톡옵션, 임원 변경을 모두 했어야 했는데 회사만 등록하면 정관과 상법에 맞게 문서를 다 만들어줘서 셀프로 할 수 있었어요. 셀프등기 하다가 등기 대행으로 바로 전환도 가능하구요!"
-customer = "정진경 주주랩스 대표"
-customerMessage = "출시 6개월 만에 1400개 이상의 회사가 주주 리걸을 사용하고 있어요!"
+title = "셀프 등기와 등기 대행 모두 주주 리걸"
+content = "회사 등록만 하면 법인 등기 알아서 척척!"
