--- a/themes/zuzu/theme.toml
+++ b/themes/zuzu/theme.toml
@@ -1,16 +1,14 @@
 # theme.toml template for a Hugo theme
 # See https://github.com/gohugoio/hugoThemes#themetoml for an example
-
-name = "zuzu"
+name = "ZUZU"
 license = "MIT"
 licenselink = "https://github.com/yourname/yourtheme/blob/master/LICENSE"
-description = "Landing page for Zuzu"
+description = "LANDING PAGE FOR ZUZU LEGAL"
 homepage = "https://legal.zuzu.network/"
 tags = []
 features = []
 min_version = "0.41.0"
 
 [author]
-  name = "Kodebox"
-  email = "jihoon@kodebox.io"
-  homepage = ""
+name = "Kodebox|JihoonLee"
+email = "jihoon@kodebox.io"
