Change the site base URL

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://jihoon0422.github.io"
+baseURL = "https://jihoon0422.github.io/zuzu-legal-landing-2"
 languageCode = "ko"
 DefaultContentLanguage = "ko"
 title = "주주 리걸"
