--- a/data/section/statistics.toml
+++ b/data/section/statistics.toml
@@ -1,15 +1,31 @@
 [statistics1]
-name = "의사록 생성"
-count = "3343"
+name = "주주총회 의사록 생성"
+count = "1102"
 
 [statistics2]
+name = "이사회 의사록 생성"
+count = "1243"
+
+[statistics3]
 name = "주식청약서 생성"
 count = "918"
 
-[statistics3]
+[statistics4]
 name = "등기신청서 생성"
 count = "2341"
 
-[statistics4]
+[statistics5]
 name = "스톡옵션 계약서 생성"
 count = "438"
+
+[statistics6]
+name = "임원 변경 승낙서 생성"
+count = "538"
+
+[statistics7]
+name = "셀프 등기 횟수"
+count = "138"
+
+[statistics8]
+name = "등기 대행 횟수"
+count = "218"
