--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -73,13 +73,13 @@ parent = "agendas"
 title = "정관 변경"
 weight = 3
 
-[[menu.main]]
-identifier = "option"
-name = "스톡옵션"
-url = "/agendas/option/"
-parent = "agendas"
-title = "스톡옵션"
-weight = 4
+# [[menu.main]]
+# identifier = "option"
+# name = "스톡옵션"
+# url = "/agendas/option/"
+# parent = "agendas"
+# title = "스톡옵션"
+# weight = 4
 
 # [[menu.main]]
 # identifier = "documents"
@@ -116,7 +116,7 @@ name = "주주 리걸 사용법"
 url = "/resource/guide/"
 title = "주주 리걸 사용법"
 parent = "resource"
-weight = 1
+weight = 2
 
 # [[menu.main]]
 # identifier = "resource-team"
@@ -132,7 +132,7 @@ name = "채용"
 url = "https://www.notion.so/f3710bea015740f8ad76941a30214635"
 title = "채용"
 parent = "resource"
-weight = 3
+weight = 1
 
 [[menu.main]]
 identifier = "resource-update"
@@ -140,7 +140,7 @@ name = "주주 블로그"
 url = "https://blog.zuzu.network"
 title = "주주 블로그"
 parent = "resource"
-weight = 4
+weight = 3
 
 [build]
 noJSConfigInAssets = false
